--- a/WebShop-Front/src/app/pages/home-page/home-page.component.html
+++ b/WebShop-Front/src/app/pages/home-page/home-page.component.html
@@ -1,10 +1,9 @@
-<div class="container-fluid my-4 px-3">
+<div class="container my-4 px-3">
+
     <h4 class="my-4 text-dark text-center">Najprodavaniji proizvodi</h4>
-
-
-    <div id="carousel-best-sold" class="carousel slide" data-ride="carousel">
+    <div id="carousel-best-sold" class="carousel slide mb-5" data-ride="carousel">
         <div class="carousel-inner row w-100 mx-auto" role="listbox">
-            <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of products;index as i"
+            <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of productsBestSold;index as i"
                 [ngClass]="{'active': i === 0}">
                 <app-product [categoryName]="categoryName" [product]="product" [subCategoryName]="product.subCategory.subCategoryName">
                </app-product>
@@ -18,6 +17,25 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div>
+    </div>   
+        
+    <h4 class="my-4 text-dark text-center">Preporučeno za vas</h4>
+    <div id="carousel-recommended" class="carousel slide mb-5" data-ride="carousel">
+        <div class="carousel-inner row w-100 mx-auto" role="listbox">
+            <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let product of productsRecommeded;index as i"
+                [ngClass]="{'active': i === 0}">
+                <app-product [categoryName]="categoryName" [product]="product" [subCategoryName]="product.subCategory.subCategoryName">
+               </app-product>
+            </div>
+        </div>
+        <a class="carousel-control-prev" id="left" href="#carousel-recommended" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" id="right" href="#carousel-recommended" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>  
 
 </div>
