--- a/WebShop-Front/src/app/shared/navbar/navbar.component.css
+++ b/WebShop-Front/src/app/shared/navbar/navbar.component.css
@@ -1,3 +1,26 @@
 .dropdown:hover>.dropdown-menu {
     display: block !important;
 }
+
+.navbar {
+    box-shadow: 0px 5px 10px #cc2036;
+}
+
+.navbar-nav .nav-item .nav-link {
+    border-bottom: none;
+    border-top: none;
+}
+
+@media only screen and (min-width: 768px) {
+    .navbar-nav .nav-item .nav-link {
+        border-bottom: 1.5px solid #0741AD !important;
+        border-top: 1.5px solid #0741AD !important;
+    }
+
+    .navbar-nav .nav-item .nav-link:hover {
+        border-bottom: 1.5px solid #cc2036 !important;
+        color: #f8f9fa !important;
+    }
+
+}
+
