--- a/WebShop-Front/src/app/shared/navbar/navbar.component.html
+++ b/WebShop-Front/src/app/shared/navbar/navbar.component.html
@@ -54,7 +54,8 @@
         </div>
     </div>
 </div>
-<nav class="navbar navbar-expand-md navbar-dark bg-logo " (scroll)="onWindowScroll($event);">
+
+<nav class="navbar sticky-top navbar-expand-md navbar-dark bg-logo" (scroll)="onWindowScroll($event);">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
